Adding RoS to docker file and ros2_ws

--- a/.devcontainer/Docker/Dockerfile
+++ b/.devcontainer/Docker/Dockerfile
@@ -55,3 +55,44 @@ RUN apt-get install -y \
     libxcb-xinerama0
 
 RUN python3 -m pip install mlflow tensorboard pyqt5==5.14.0
+
+
+# Adding Ros_2 Humble installation
+
+RUN apt install -y software-properties-common 
+RUN add-apt-repository universe 
+RUN apt update && apt install curl -y
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
+RUN apt update
+RUN apt upgrade -y
+RUN apt install ros-humble-desktop -y
+RUN echo "source /opt/ros/humble/setup.bash" >> ~/.bashrc
+
+# Extra ROS features
+
+#Install rqt
+RUN apt update
+RUN apt install ~nros-humble-rqt* -y
+
+#Install colcon
+RUN apt install -y python3-colcon-common-extensions
+
+
+RUN apt update && apt install -y \
+    python3-flake8-docstrings \
+    python3-pip \
+    python3-pytest-cov \
+    ros-dev-tools
+  
+RUN apt install -y \
+    python3-flake8-blind-except \
+    python3-flake8-builtins \
+    python3-flake8-class-newline \
+    python3-flake8-comprehensions \
+    python3-flake8-deprecated \
+    python3-flake8-import-order \
+    python3-flake8-quotes \
+    python3-pytest-repeat \
+    python3-pytest-rerunfailures
+
