--- a/.devcontainer/Docker/docker-compose.yml
+++ b/.devcontainer/Docker/docker-compose.yml
@@ -6,13 +6,14 @@ services:
       context: .
       dockerfile: Dockerfile
     devices:
-      - /dev/bus/usb/010/002:/dev/bus/usb/010/002 # change this according to the output of "lsusb | grep -i cypress"
+      - /dev/bus/usb:/dev/bus/usb # change this according to the output of "lsusb | grep -i cypress"
     stdin_open: true
     ports:
       - 5920:5920
     environment:
      - DISPLAY=${DISPLAY}
      - QT_X11_NO_MITSHM=1
+     - ROS_DOMAIN_ID=15
     cap_add:
       - SYS_NICE
     network_mode: "host"
